// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`AdvancedFilter > should render Advance filter 1`] = `
<DocumentFragment>
  .c0 {
  display: flex;
  align-items: center;
  justify-content: space-between;
  padding: 1rem;
}

.c0 >h3 {
  font-family: Open Sans;
  font-size: 1rem;
  font-style: normal;
  font-weight: 500;
  line-height: 1.5rem;
}

.c0 button svg {
  fill: !important;
}

.c2 {
  width: 100%;
}

.c2 button {
  width: 50%;
  padding-right: 0;
}

.c1 {
  height: calc(100vh - 9.9rem);
  padding-bottom: 2rem;
}

@media (min-width: 769px) {
  .c0 {
    min-width: 18rem;
  }
}

@media (max-width: 768px) {
  .c2 {
    position: fixed;
    bottom: 0;
    left: 0;
  }
}

@media (max-width: 768px) {
  .c1 {
    max-height: calc(100vh - 13rem);
  }
}

<span
    class="cds--popover"
  >
    <span
      class="cds--popover-content filter-popover-content"
    >
      <div
        class="c0"
      >
        <h3>
          Filters
        </h3>
        <span
          class="cds--popover-container cds--popover--caret cds--popover--high-contrast cds--popover--bottom-right cds--tooltip cds--icon-tooltip"
        >
          <div
            class="cds--tooltip-trigger__wrapper"
          >
            <button
              aria-labelledby="tooltip-:r0:"
              class="cds--btn--icon-only cds--btn cds--btn--md cds--layout--size-md cds--btn--ghost"
              data-testid="filter-close"
              type="button"
            >
              <svg
                aria-hidden="true"
                fill="currentColor"
                focusable="false"
                height="18"
                preserveAspectRatio="xMidYMid meet"
                viewBox="0 0 32 32"
                width="18"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M17.4141 16L24 9.4141 22.5859 8 16 14.5859 9.4143 8 8 9.4141 14.5859 16 8 22.5859 9.4143 24 16 17.4141 22.5859 24 24 22.5859 17.4141 16z"
                />
              </svg>
            </button>
          </div>
          <span
            aria-hidden="true"
            class="cds--popover"
            id="tooltip-:r0:"
            role="tooltip"
          >
            <span
              class="cds--popover-content cds--tooltip-content"
            >
              Close
            </span>
            <span
              class="cds--popover-caret"
            />
          </span>
        </span>
      </div>
      <form
        aria-label="filter-form"
        class="cds--form"
      >
        <div
          class="scrollbar-container c1 ps"
        >
          <div
            class="flex! flex-col! gap-3!"
            data-orientation="vertical"
            data-slot="accordion"
          >
            <div
              class=""
              data-orientation="vertical"
              data-slot="accordion-item"
              data-state="closed"
            >
              <h3
                class="flex!"
                data-orientation="vertical"
                data-slot="accordion-header"
                data-state="closed"
              >
                <button
                  aria-controls="radix-:r3:"
                  aria-expanded="false"
                  class="flex! w-full! items-center! justify-between! gap-3! border-0! bg-transparent! outline-none! px-3.5! py-3! text-foreground! data-[state=open]:pb-3! data-[state=open]:pt-3! font-normal! not-italic! text-[16px]! leading-[24px]! tracking-[0%]!"
                  data-orientation="vertical"
                  data-radix-collection-item=""
                  data-slot="accordion-trigger"
                  data-state="closed"
                  id="radix-:r2:"
                  type="button"
                >
                  <span>
                    School 
                  </span>
                  <svg
                    aria-hidden="true"
                    class="lucide lucide-chevron-down"
                    fill="none"
                    height="16"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                    viewBox="0 0 24 24"
                    width="16"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="m6 9 6 6 6-6"
                    />
                  </svg>
                </button>
              </h3>
              <div
                aria-labelledby="radix-:r2:"
                class=""
                data-orientation="vertical"
                data-slot="accordion-content"
                data-state="closed"
                hidden=""
                id="radix-:r3:"
                role="region"
                style="--radix-accordion-content-height: var(--radix-collapsible-content-height); --radix-accordion-content-width: var(--radix-collapsible-content-width);"
              />
            </div>
          </div>
          <div
            class="bg-border shrink-0 data-[orientation=horizontal]:h-px data-[orientation=horizontal]:w-full data-[orientation=vertical]:h-full data-[orientation=vertical]:w-px my-2!"
            data-orientation="horizontal"
            data-slot="separator"
            role="none"
          />
          <div
            class="flex! flex-col! gap-3!"
            data-orientation="vertical"
            data-slot="accordion"
          >
            <div
              class=""
              data-orientation="vertical"
              data-slot="accordion-item"
              data-state="closed"
            >
              <h3
                class="flex!"
                data-orientation="vertical"
                data-slot="accordion-header"
                data-state="closed"
              >
                <button
                  aria-controls="radix-:r5:"
                  aria-expanded="false"
                  class="flex! w-full! items-center! justify-between! gap-3! border-0! bg-transparent! outline-none! px-3.5! py-3! text-foreground! data-[state=open]:pb-3! data-[state=open]:pt-3! font-normal! not-italic! text-[16px]! leading-[24px]! tracking-[0%]!"
                  data-orientation="vertical"
                  data-radix-collection-item=""
                  data-slot="accordion-trigger"
                  data-state="closed"
                  id="radix-:r4:"
                  type="button"
                >
                  <span>
                    Health facilities 
                  </span>
                  <svg
                    aria-hidden="true"
                    class="lucide lucide-chevron-down"
                    fill="none"
                    height="16"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                    viewBox="0 0 24 24"
                    width="16"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="m6 9 6 6 6-6"
                    />
                  </svg>
                </button>
              </h3>
              <div
                aria-labelledby="radix-:r4:"
                class=""
                data-orientation="vertical"
                data-slot="accordion-content"
                data-state="closed"
                hidden=""
                id="radix-:r5:"
                role="region"
                style="--radix-accordion-content-height: var(--radix-collapsible-content-height); --radix-accordion-content-width: var(--radix-collapsible-content-width);"
              />
            </div>
          </div>
          <div
            class="ps__rail-x"
            style="left: 0px; top: 0px;"
          >
            <div
              class="ps__thumb-x"
              style="left: 0px; width: 0px;"
              tabindex="0"
            />
          </div>
          <div
            class="ps__rail-y"
            style="top: 0px; left: 0px;"
          >
            <div
              class="ps__thumb-y"
              style="top: 0px; height: 0px;"
              tabindex="0"
            />
          </div>
        </div>
        <div
          class="c2"
        >
          <button
            class="cds--btn cds--btn--secondary"
            type="reset"
          >
            Reset
          </button>
          <button
            class="cds--btn cds--btn--primary"
            type="submit"
          >
            Apply
          </button>
        </div>
      </form>
    </span>
    <span
      class="cds--popover-caret"
    />
  </span>
</DocumentFragment>
`;

exports[`AdvancedFilter > should render Advance filter 2`] = `
<DocumentFragment>
  .c0 {
  display: flex;
  align-items: center;
  justify-content: space-between;
  padding: 1rem;
}

.c0 >h3 {
  font-family: Open Sans;
  font-size: 1rem;
  font-style: normal;
  font-weight: 500;
  line-height: 1.5rem;
}

.c0 button svg {
  fill: !important;
}

.c2 {
  width: 100%;
}

.c2 button {
  width: 50%;
  padding-right: 0;
}

.c1 {
  height: calc(100vh - 9.9rem);
  padding-bottom: 2rem;
}

@media (min-width: 769px) {
  .c0 {
    min-width: 18rem;
  }
}

@media (max-width: 768px) {
  .c2 {
    position: fixed;
    bottom: 0;
    left: 0;
  }
}

@media (max-width: 768px) {
  .c1 {
    max-height: calc(100vh - 13rem);
  }
}

<span
    class="cds--popover"
  >
    <span
      class="cds--popover-content filter-popover-content"
    >
      <div
        class="c0"
      >
        <h3>
          Filters
        </h3>
        <span
          class="cds--popover-container cds--popover--caret cds--popover--high-contrast cds--popover--bottom-right cds--tooltip cds--icon-tooltip"
        >
          <div
            class="cds--tooltip-trigger__wrapper"
          >
            <button
              aria-labelledby="tooltip-:r8:"
              class="cds--btn--icon-only cds--btn cds--btn--md cds--layout--size-md cds--btn--ghost"
              data-testid="filter-close"
              type="button"
            >
              <svg
                aria-hidden="true"
                fill="currentColor"
                focusable="false"
                height="18"
                preserveAspectRatio="xMidYMid meet"
                viewBox="0 0 32 32"
                width="18"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M17.4141 16L24 9.4141 22.5859 8 16 14.5859 9.4143 8 8 9.4141 14.5859 16 8 22.5859 9.4143 24 16 17.4141 22.5859 24 24 22.5859 17.4141 16z"
                />
              </svg>
            </button>
          </div>
          <span
            aria-hidden="true"
            class="cds--popover"
            id="tooltip-:r8:"
            role="tooltip"
          >
            <span
              class="cds--popover-content cds--tooltip-content"
            >
              Close
            </span>
            <span
              class="cds--popover-caret"
            />
          </span>
        </span>
      </div>
      <form
        aria-label="filter-form"
        class="cds--form"
      >
        <div
          class="scrollbar-container c1 ps"
        >
          <div
            class="flex! flex-col! gap-3!"
            data-orientation="vertical"
            data-slot="accordion"
          >
            <div
              class=""
              data-orientation="vertical"
              data-slot="accordion-item"
              data-state="closed"
            >
              <h3
                class="flex!"
                data-orientation="vertical"
                data-slot="accordion-header"
                data-state="closed"
              >
                <button
                  aria-controls="radix-:rb:"
                  aria-expanded="false"
                  class="flex! w-full! items-center! justify-between! gap-3! border-0! bg-transparent! outline-none! px-3.5! py-3! text-foreground! data-[state=open]:pb-3! data-[state=open]:pt-3! font-normal! not-italic! text-[16px]! leading-[24px]! tracking-[0%]!"
                  data-orientation="vertical"
                  data-radix-collection-item=""
                  data-slot="accordion-trigger"
                  data-state="closed"
                  id="radix-:ra:"
                  type="button"
                >
                  <span>
                    School 
                  </span>
                  <svg
                    aria-hidden="true"
                    class="lucide lucide-chevron-down"
                    fill="none"
                    height="16"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                    viewBox="0 0 24 24"
                    width="16"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="m6 9 6 6 6-6"
                    />
                  </svg>
                </button>
              </h3>
              <div
                aria-labelledby="radix-:ra:"
                class=""
                data-orientation="vertical"
                data-slot="accordion-content"
                data-state="closed"
                hidden=""
                id="radix-:rb:"
                role="region"
                style="--radix-accordion-content-height: var(--radix-collapsible-content-height); --radix-accordion-content-width: var(--radix-collapsible-content-width);"
              />
            </div>
          </div>
          <div
            class="bg-border shrink-0 data-[orientation=horizontal]:h-px data-[orientation=horizontal]:w-full data-[orientation=vertical]:h-full data-[orientation=vertical]:w-px my-2!"
            data-orientation="horizontal"
            data-slot="separator"
            role="none"
          />
          <div
            class="flex! flex-col! gap-3!"
            data-orientation="vertical"
            data-slot="accordion"
          >
            <div
              class=""
              data-orientation="vertical"
              data-slot="accordion-item"
              data-state="closed"
            >
              <h3
                class="flex!"
                data-orientation="vertical"
                data-slot="accordion-header"
                data-state="closed"
              >
                <button
                  aria-controls="radix-:rd:"
                  aria-expanded="false"
                  class="flex! w-full! items-center! justify-between! gap-3! border-0! bg-transparent! outline-none! px-3.5! py-3! text-foreground! data-[state=open]:pb-3! data-[state=open]:pt-3! font-normal! not-italic! text-[16px]! leading-[24px]! tracking-[0%]!"
                  data-orientation="vertical"
                  data-radix-collection-item=""
                  data-slot="accordion-trigger"
                  data-state="closed"
                  id="radix-:rc:"
                  type="button"
                >
                  <span>
                    Health facilities 
                  </span>
                  <svg
                    aria-hidden="true"
                    class="lucide lucide-chevron-down"
                    fill="none"
                    height="16"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                    viewBox="0 0 24 24"
                    width="16"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="m6 9 6 6 6-6"
                    />
                  </svg>
                </button>
              </h3>
              <div
                aria-labelledby="radix-:rc:"
                class=""
                data-orientation="vertical"
                data-slot="accordion-content"
                data-state="closed"
                hidden=""
                id="radix-:rd:"
                role="region"
                style="--radix-accordion-content-height: var(--radix-collapsible-content-height); --radix-accordion-content-width: var(--radix-collapsible-content-width);"
              />
            </div>
          </div>
          <div
            class="ps__rail-x"
            style="left: 0px; top: 0px;"
          >
            <div
              class="ps__thumb-x"
              style="left: 0px; width: 0px;"
              tabindex="0"
            />
          </div>
          <div
            class="ps__rail-y"
            style="top: 0px; left: 0px;"
          >
            <div
              class="ps__thumb-y"
              style="top: 0px; height: 0px;"
              tabindex="0"
            />
          </div>
        </div>
        <div
          class="c2"
        >
          <button
            class="cds--btn cds--btn--secondary"
            type="reset"
          >
            Reset
          </button>
          <button
            class="cds--btn cds--btn--primary"
            type="submit"
          >
            Apply
          </button>
        </div>
      </form>
    </span>
    <span
      class="cds--popover-caret"
    />
  </span>
</DocumentFragment>
`;

exports[`AdvancedFilter > should render Advance filter button  1`] = `<DocumentFragment />`;

exports[`AdvancedFilter > should render Advance filter button 1`] = `<DocumentFragment />`;

exports[`RangeTextInput Component > RangeTextInput input 1`] = `
.c1 button {
  border: none;
  background: inherit;
  cursor: pointer;
}

.c1 .cds--popover-content {
  background: #181818!important;
}

.c1 svg {
  width: 0.75rem;
  height: 0.75rem;
}

.c1 .cds--popover-content {
  max-inline-size: 18rem;
}

.c0 {
  padding: 0.5rem 1rem;
}

.c0 .group-input {
  display: flex;
  justify-content: space-between;
  gap: 1rem;
  padding: 0;
}

.c0 .cds--label {
  margin-bottom: 0.5rem;
}

.c2 {
  padding: 0.5rem 1rem;
}

.c3 {
  margin: 0.5rem 0;
}

.c3 .cds--checkbox-label-text {
  font-size: 0.75rem;
}

<div>
  <div
    class="c0"
  >
    <label
      class="cds--label cds--label--no-margin"
    >
      No of Teachers
      <span
        class="cds--popover-container cds--popover--caret cds--popover--high-contrast cds--popover--bottom cds--tooltip c1"
      >
        <div
          class="cds--tooltip-trigger__wrapper"
        >
          <button
            aria-labelledby="tooltip-:rg:"
            type="button"
          >
            <svg
              aria-hidden="true"
              fill="currentColor"
              focusable="false"
              height="16"
              preserveAspectRatio="xMidYMid meet"
              viewBox="0 0 16 16"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M8.5 11L8.5 6.5 6.5 6.5 6.5 7.5 7.5 7.5 7.5 11 6 11 6 12 10 12 10 11zM8 3.5c-.4 0-.8.3-.8.8S7.6 5 8 5c.4 0 .8-.3.8-.8S8.4 3.5 8 3.5z"
              />
              <path
                d="M8,15c-3.9,0-7-3.1-7-7s3.1-7,7-7s7,3.1,7,7S11.9,15,8,15z M8,2C4.7,2,2,4.7,2,8s2.7,6,6,6s6-2.7,6-6S11.3,2,8,2z"
              />
            </svg>
          </button>
        </div>
        <span
          aria-hidden="true"
          class="cds--popover"
          id="tooltip-:rg:"
          role="tooltip"
        >
          <span
            class="cds--popover-content cds--tooltip-content"
          >
            test range input
          </span>
          <span
            class="cds--popover-caret"
          />
        </span>
      </span>
    </label>
    <div
      class="c2 group-input"
    >
      <div
        class="cds--form-item cds--text-input-wrapper"
      >
        <div
          class="cds--text-input__label-wrapper"
        />
        <div
          class="cds--text-input__field-outer-wrapper"
        >
          <div
            class="cds--text-input__field-wrapper"
          >
            <input
              class="cds--text-input cds--text-input--sm cds--layout--size-sm"
              id="-min-input"
              placeholder="Min (0)"
              title="Min (0)"
              type="number"
              value="15"
            />
            <span
              class="cds--text-input__counter-alert"
              role="alert"
            />
          </div>
        </div>
      </div>
      <div
        class="cds--form-item cds--text-input-wrapper"
      >
        <div
          class="cds--text-input__label-wrapper"
        />
        <div
          class="cds--text-input__field-outer-wrapper"
        >
          <div
            class="cds--text-input__field-wrapper"
          >
            <input
              class="cds--text-input cds--text-input--sm cds--layout--size-sm"
              id="-max-input"
              placeholder="Max (10K)"
              title="Max (10K)"
              type="number"
              value="20"
            />
            <span
              class="cds--text-input__counter-alert"
              role="alert"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      class="cds--form-item cds--checkbox-wrapper c3"
    >
      <input
        checked=""
        class="cds--checkbox"
        id="checkbox-num_computers__range"
        style="padding: 0rem 1rem;"
        type="checkbox"
      />
      <label
        class="cds--checkbox-label"
        for="checkbox-num_computers__range"
        title=""
      >
        <span
          class="cds--checkbox-label-text"
        >
          Show null values
        </span>
      </label>
      <div
        class="cds--checkbox__validation-msg"
      />
    </div>
  </div>
</div>
`;
